--- a/brick-breaker/package.json
+++ b/brick-breaker/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecs",
+  "name": "brick-breaker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "webpack-cli": "^4.10.0"
+  "dependencies": {
+    "ecs": "file:.."
   }
 }
